syntax = "proto3";
package m2g.pb;

enum AnimationStateType {
  NO_ANIMATION_STATE = 0;
}
